# daniel-test9

./: .flake8  README.md  bump_version.py  cdk_hooks.sh  cdk_hooks_post.sh  cdk_hooks_pre.sh  configure_toml_aws.sh  pre-commit  pyproject.toml  repo_metadata.json  setup.py  template_input.json
.github/workflows/: bump_version.yml  periodic_snyk_scan_python.yml  python_unit_tests.yml  release.yml  run_flake8.yml  upload_shared_codeartifact_dev_aws.yml  upload_shared_codeartifact_prod_aws.yml  verify_version_bump.yml
